修改Base64编码的类